Add update profile, fix bug and small refactor
- Update MakeRequest method to return the response status instead of forcing a 500 error for every error
- Update cloudinary upload to handle both URL, base64, file system and io.Reader
- Add UpdateProfile API: allow update user's data (first name, last name, password, avatar)
